@@ -1,5 +1,7 @@
 Changes for APR 1.2.3-dev
 
+  *) Keep testpipe.c from hanging on win32. [Garrett Rooney]
+
   *) Documented that apr_stat and apr_dir_read can return APR_INCOMPLETE,
      and how to determine which parts of the resulting apr_finfo_t can be
      used in such a case.
